chains/tempo-old/check_error.txt
    Checking tempo-project v0.1.0 (C:\My Script\testnet-framework\chains\tempo)
warning: unused import: `ethers::abi::AbiEncode`
 --> chains\tempo\src\tasks\t04_create_stable.rs:5:5
  |
5 | use ethers::abi::AbiEncode;
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Context`
 --> chains\tempo\src\tasks\t05_swap_stable.rs:2:14
  |
2 | use anyhow::{Context, Result};
  |              ^^^^^^^

warning: unused import: `ethers::abi::AbiEncode`
 --> chains\tempo\src\tasks\t05_swap_stable.rs:5:5
  |
5 | use ethers::abi::AbiEncode;
  |     ^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `ITIP20FactoryEvents`
  --> chains\tempo\src\tasks\t04_create_stable.rs:77:35
   |
77 |              if let Ok(decoded) = ITIP20FactoryEvents::decode_log(&log.into()) {
   |                                   ^^^^^^^^^^^^^^^^^^^
   |                                   |
   |                                   use of undeclared type `ITIP20FactoryEvents`
   |                                   help: a struct with a similar name exists: `ITIP20Factory`

warning: unused variable: `count`
  --> chains\tempo\src\tasks\t02_claim_faucet.rs:48:13
   |
48 |         let count = tx_hashes.len();
   |             ^^^^^ help: if this is intentional, prefix it with an underscore: `_count`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error: future cannot be sent between threads safely
  --> chains\tempo\src\tasks\t05_swap_stable.rs:38:5
   |
38 |     async fn run(&self, ctx: TaskContext) -> Result<TaskResult> {
   |     ^^^^^ future created by async block is not `Send`
   |
   = help: within `{async block@chains\tempo\src\tasks\t05_swap_stable.rs:38:5: 38:10}`, the trait `Send` is not implemented for `Rc<UnsafeCell<ReseedingRng<rand_chacha::chacha::ChaCha12Core, OsRng>>>`
note: future is not `Send` as this value is used across an await
  --> chains\tempo\src\tasks\t05_swap_stable.rs:64:72
   |
56 |         let mut rng = rand::thread_rng();
   |             ------- has type `ThreadRng` which is not `Send`
...
64 |         let balance = token_in.balance_of(ctx.wallet.address()).call().await?;
   |                                                                        ^^^^^ await occurs here, with `mut rng` maybe used later
   = note: required for the cast from `Pin<Box<{async block@chains\tempo\src\tasks\t05_swap_stable.rs:38:5: 38:10}>>` to `Pin<Box<dyn Future<Output = std::result::Result<TaskResult, anyhow::Error>> + Send>>`

error: future cannot be sent between threads safely
  --> chains\tempo\src\tasks\t06_random_fee.rs:14:5
   |
14 |     async fn run(&self, ctx: TaskContext) -> Result<TaskResult> {
   |     ^^^^^ future created by async block is not `Send`
   |
   = help: within `{async block@chains\tempo\src\tasks\t06_random_fee.rs:14:5: 14:10}`, the trait `Send` is not implemented for `Rc<UnsafeCell<ReseedingRng<rand_chacha::chacha::ChaCha12Core, OsRng>>>`
note: future is not `Send` as this value is used across an await
  --> chains\tempo\src\utils\fee_preferences.rs:57:33
   |
28 |         let mut rng = rand::thread_rng();
   |             ------- has type `ThreadRng` which is not `Send`
...
57 |         let pending = tx.send().await?;
   |                                 ^^^^^ await occurs here, with `mut rng` maybe used later
   = note: required for the cast from `Pin<Box<{async block@chains\tempo\src\tasks\t06_random_fee.rs:14:5: 14:10}>>` to `Pin<Box<dyn Future<Output = std::result::Result<TaskResult, anyhow::Error>> + Send>>`

warning: unused variable: `fee_manager`
  --> chains\tempo\src\utils\fee_preferences.rs:39:13
   |
39 |         let fee_manager = IFeeManager::new(Address::from_str(FEE_MANAGER_ADDRESS)?, provider.clone());
   |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_fee_manager`

warning: unused variable: `pending`
  --> chains\tempo\src\utils\fee_preferences.rs:57:13
   |
57 |         let pending = tx.send().await?;
   |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_pending`

error[E0433]: failed to resolve: use of undeclared type `ITIP20FactoryEvents`
  --> chains\tempo\src\tasks\t04_create_stable.rs:78:25
   |
78 |                  if let ITIP20FactoryEvents::TokenCreatedFilter(e) = decoded {
   |                         ^^^^^^^^^^^^^^^^^^^
   |                         |
   |                         use of undeclared type `ITIP20FactoryEvents`
   |                         help: a struct with a similar name exists: `ITIP20Factory`

For more information about this error, try `rustc --explain E0433`.
warning: `tempo-project` (lib) generated 6 warnings
error: could not compile `tempo-project` (lib) due to 4 previous errors; 6 warnings emitted
